--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^20.3.0",
+    "@react-native-firebase/database": "^20.3.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "react": "18.2.0",
-    "react-native": "0.74.4"
+    "react-native": "0.74.4",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.33.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
